2012-11-07  Peter Beverloo  <peter@chromium.org>

        Don't show the Android tester in garden-o-matic yet
        https://bugs.webkit.org/show_bug.cgi?id=101476

        Reviewed by Adam Barth.

        The Android tester just started running layout tests, and doesn't upload its
        results yet. Don't show it for now. This exception will be removed once it
        has a baseline of greenness.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/config.js:
        (.):

2012-11-07  Balazs Kelemen  <kbalazs@webkit.org>

        WebKitTestRunner flakily hangs when running pixel tests on Qt
        https://bugs.webkit.org/show_bug.cgi?id=100686

        Reviewed by Csaba Osztrogonác.

        Make WebKitTestRunner harden against the situation when the coordinated
        graphics rendering synchronisation fails. If we time out when waiting
        for the forced repaint to finish it usually a symptom of the synchronisation
        has been broken. In this case all other tests will fail with the same error.
        The underlying problem is not yet known. Ths patch make us report this situation
        as web process unresponsiveness, so the test harness will kill us and launch
        a new instance. This will make our pixel test bot usable while it should not limit
        us debugging the underlying bug.

        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::run):
        * WebKitTestRunner/TestInvocation.cpp:
        (WTR::TestInvocation::TestInvocation):
        (WTR::TestInvocation::invoke):
        (WTR::TestInvocation::dumpWebProcessUnresponsiveness):
        (WTR::TestInvocation::didReceiveMessageFromInjectedBundle):
        * WebKitTestRunner/TestInvocation.h:
        (TestInvocation): Introduce new members to hold our state
        that was local to invoke() so far.
        * WebKitTestRunner/qt/TestInvocationQt.cpp:
        (WTR::TestInvocation::dumpPixelsAndCompareWithExpected):
